# GentlyOS-Rusted-Metal

./: CLAUDE.md  Cargo.toml  Dockerfile  ODDITIES_REPORT.md  README.md
contracts/solana/programs/gently-rewards/src/: lib.rs
crates/gently-alexandria/src/: tesseract.rs
crates/gently-architect/src/: recall.rs  security.rs  tree.rs
crates/gently-brain/: Cargo.toml
crates/gently-brain/src/: agent.rs  claude.rs  daemon.rs  download.rs  embedder.rs  gitchain.rs  knowledge.rs  lib.rs  llama.rs  lora.rs  modelchain.rs  orchestrator.rs
crates/gently-btc/: Cargo.toml
crates/gently-btc/src/: lib.rs
crates/gently-cipher/src/: analysis.rs  lib.rs
crates/gently-core/: Cargo.toml
crates/gently-core/src/: lib.rs  vault.rs
crates/gently-core/src/crypto/: berlin.rs  genesis.rs  mod.rs
crates/gently-core/src/pattern/: primitives.rs
crates/gently-dance/src/: lib.rs
crates/gently-feed/: Cargo.toml
crates/gently-feed/src/: bridge.rs  extractor.rs  lib.rs
crates/gently-gateway/: Cargo.toml
crates/gently-gateway/src/: filter.rs  lib.rs
crates/gently-guardian/: Cargo.toml
crates/gently-guardian/src/: anti_cheat.rs  contribution.rs  hardware.rs  lib.rs  rewards.rs
crates/gently-inference/: Cargo.toml
crates/gently-inference/src/: lib.rs  solana.rs
crates/gently-ipfs/: Cargo.toml
crates/gently-ipfs/src/: client.rs  lib.rs  operations.rs  pinning.rs  vault.rs
crates/gently-mcp/src/: lib.rs  tools.rs
crates/gently-network/: Cargo.toml
crates/gently-network/src/: capture.rs  lib.rs  mitm.rs
crates/gently-search/: Cargo.toml
crates/gently-search/src/: index.rs  lib.rs  router.rs  thought.rs  wormhole.rs
crates/gently-security/: Cargo.toml
crates/gently-security/src/: controller.rs  distiller.rs  honeypot.rs  lib.rs  trust.rs
crates/gently-security/src/daemons/: detection.rs  foundation.rs  intel.rs  traffic.rs
crates/gently-spl/: Cargo.toml
crates/gently-spl/src/: filesystem.rs  genos.rs  governance.rs  lib.rs  nft.rs  permissions.rs  token.rs  wallet.rs
crates/gently-sploit/: Cargo.toml
crates/gently-sploit/src/: lib.rs
crates/gently-sploit/src/sessions/: mod.rs
crates/gently-visual/src/: lib.rs
crates/gently-web/: Cargo.toml
crates/gently-web/src/: handlers.rs  lib.rs  state.rs  templates.rs
gently-cli/: Cargo.toml
gently-cli/src/: main.rs  report.rs
gentlyos-tui/: Cargo.toml
scripts/: download_minimax.py
scripts/deploy/: build-iso.sh
web/: install.sh
