[package]
name = "gently-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for GentlyOS"

[[bin]]
name = "gently"
path = "src/main.rs"

[dependencies]
gently-core.workspace = true
gently-dance.workspace = true
gently-audio.workspace = true
gently-visual.workspace = true
gently-btc.workspace = true
gently-spl.workspace = true
gently-feed.workspace = true
gently-search.workspace = true
gently-mcp.workspace = true
gently-architect.workspace = true
gently-brain.workspace = true
gently-network.workspace = true
gently-ipfs.workspace = true
gently-cipher.workspace = true
gently-sploit.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true
bs58 = "0.5"
md5 = "0.7"
sha1.workspace = true
dirs.workspace = true
ratatui.workspace = true
crossterm = "0.28"
