[package]
name = "gently-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thought Index - User-unique, context-routed search system"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# IDs
uuid = { workspace = true }

# Pattern matching
regex = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Internal crates
gently-core = { workspace = true }
gently-feed = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
