[package]
name = "gently-spl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solana SPL + NFT integration for GentlyOS - KEY carrier and access control"

[dependencies]
gently-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
bs58 = "0.5"
ed25519-dalek = "1.0"

# Solana dependencies (feature-gated for lighter builds)
[features]
default = []
solana = ["solana-sdk", "solana-client", "spl-token", "spl-associated-token-account"]

[dependencies.solana-sdk]
version = "1.17"
optional = true

[dependencies.solana-client]
version = "1.17"
optional = true

[dependencies.spl-token]
version = "4.0"
optional = true

[dependencies.spl-associated-token-account]
version = "2.3"
optional = true
